--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,38 +1,44 @@
-
-#navbar {
-    font-size: 18px;
-    background-color: var(--main-color);
-    margin-top: 1.5rem;
-    margin-left: 2rem;
-    padding-top: 1rem;
-    border-radius: 2rem;
-    width: 13rem;
-    height: 37rem;
-    box-shadow: -10px 8px 12px #0000003d;
-}
-
 #nav-container {
-
-    padding: 0px;
-    height: 93%;
+    background-color: var(--main-color);
+    margin: 1.4rem 1.7rem 1.4rem 1.7rem; 
+    border-radius: 2rem;
+    width: calc(100% - 3.4rem);
+    height: calc(100% - 2.8rem);
+    box-shadow: -10px 8px 12px #0000003d;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
 
-#nav-container li {
+.item-container h1 {
+    font-size: 18px;
     color: var(--text-color);
     margin-left: 0.5rem;
-    list-style: none;
 }
 
 .item-container{
+    margin-left: 0.5rem;
     display: flex;
-    margin-left: 1rem;
     flex-direction: row;
     padding-left: 1rem;
+    align-items: center;
 }
 
-.item-container i{  
+.item-container i{ 
     color: var(--accent-color);
+}
+
+
+@media screen and (max-width: 600px){
+    #nav-container {
+            background-color: var(--main-color);
+            margin: 0;
+            border-radius: 0;
+            width: 100% ;
+            height: 100%;
+            box-shadow: -10px 8px 12px #0000003d;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
 }
