--- a/src/styles/NavbarMobile.css
+++ b/src/styles/NavbarMobile.css
@@ -5,6 +5,16 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 1.2rem 0 1.2rem;
+    margin: 0.6rem;
+    border-radius: 3rem;
+    box-shadow: -10px 8px 12px #0000003d;
 }
 
 
+
+
+
+#user-icon{
+    color: var(--accent-color);
+    font-size: 25px;
+}
