--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -1,8 +1,5 @@
 #content-container {
-    width: 50%;
-    height: 30%;
-    background-color: blueviolet;
-    position: absolute;
-    top: 5rem;
-    left: 17rem;
+    width: 100%;
+    height:70% ;
+    background-color: red;  
 }
