--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,7 +1,8 @@
 #container-search{
     font-size: 12px;
     padding-left: 0.8rem;
-    width: 50vw;
+    width: 70%;
+    height: 2rem;
     background-color: var(--main-color);
     border-radius: 1rem;
     color: var(--text-color);
