se termino de estilizar el componente content para version web y mobile

--- a/src/App.css
+++ b/src/App.css
@@ -24,13 +24,11 @@
         flex-direction: column;
     }
     #container-nav{
-        background-color: tomato;
         width: 100%;
-        height: 12%;
+        height: auto;
     }
     #container-section{
         width: 100%;
         height:88%;
-        background-color: brown;
     }
 }
