--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -1,5 +1,15 @@
 #content-container {
-    width: 100%;
-    height:70% ;
-    background-color: red;  
+    margin: 0 2rem 6rem 0; 
+    width: calc(100% - 2rem);
+    height: calc(100% - 6rem);  
+    background-color: violet;
+}
+
+
+@media screen and (max-width: 600px){
+    #content-container {
+        margin:0;
+        width: 100%;
+        height: 100%;
+    }
 }
