--- a/src/styles/NavWeb.css
+++ b/src/styles/NavWeb.css
@@ -22,6 +22,12 @@
     flex-direction: row;
     padding-left: 1rem;
     align-items: center;
+    background: none;
+    border: 0;
+    color: inherit;
+    font: inherit;
+    line-height: normal;
+    overflow: visible;
 }
 
 .item-web i{ 
