--- a/src/styles/MenuMobile.css
+++ b/src/styles/MenuMobile.css
@@ -1,3 +1,8 @@
+#menumobile-container{
+    width: 1.8rem;
+    height: 100%;
+    background-color: yellowgreen;
+}
 
 #menu-icon{
     font-size: 30px;
