--- a/src/styles/MenuMobileDropDown.css
+++ b/src/styles/MenuMobileDropDown.css
@@ -1,14 +1,13 @@
-#container-allDisplay{
+/* #container-allDisplay{
     position: absolute;
     top:0;
     left:0;
     width: 100vw;
     height: 100vh;
     display:flex;
+} */
 
-}
-
-/* #container-DropDown{
+#container-DropDown{
     width: 50%;
     height: 100%;
     background-color: rgba(218, 218, 218, 0.315);
@@ -16,7 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-} */
+}
 
 
 #container-rest{
@@ -44,3 +43,4 @@
     font-size: 23px;
     color: var(--text-color);
 }
+
