--- a/src/styles/MenuMobileDropDown.css
+++ b/src/styles/MenuMobileDropDown.css
@@ -18,6 +18,8 @@
     backdrop-filter: blur(10px);
     display: flex;
     flex-direction: column;
+    border-radius: 0 20px 20px 0;
+    box-shadow: 5px 8px 12px #0000003d;
 }
 
 .section-top{ 
