--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,13 @@
     width: 15.5rem;
     min-width: 15.5rem;
     height: 100%; 
-    
 }
 
 #container-section{
-    width: auto;
-    width: 100%;
+    width:calc(100% - 15.5rem);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 
 }
 /* Esto es para la parte mobile */
@@ -25,7 +26,7 @@
     }
     #container-nav{
         width: 100%;
-        height: auto;
+        height: 12%;
     }
     #container-section{
         width: 100%;
