--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -1,15 +1,14 @@
 #content-container {
-    margin: 0 2rem 6rem 0; 
-    width: calc(100% - 2rem);
-    height: calc(100% - 6rem);  
-    overflow: hidden;
+    width: 100% ;
+    height: 90%;  
+    display: flex;
 }
 
 
 @media screen and (max-width: 600px){
     #content-container {
-        margin:0;
-        width: 100%;
+        margin:0 1rem 0 1rem;
+        width: calc(100% - 2rem);
         height: 100%;
     }
 }
