--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -1,7 +1,9 @@
 #content-container {
-    width: 100% ;
-    height: 90%;  
+    width: calc(100% - 1.5rem) ;
+    height: calc(90% - 1.5rem);  
     display: flex;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 
