--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -3,7 +3,7 @@
     padding-left: 0.8rem;
     width: 70%;
     height: 2rem;
-    background-color: var(--main-color);
+    background-color: var(--secundary-color);
     border-radius: 1rem;
     color: var(--text-color);
     box-shadow: var(--color-shadow);
