--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -9,6 +9,7 @@
     box-shadow: var(--color-shadow);
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 
@@ -20,7 +21,7 @@
 }
 
 #container-search i{
-
+    margin-right: 0.8rem;
     font-size: 17px;
     color: var(--accent-color);
 }
