--- a/src/styles/NavMobile.css
+++ b/src/styles/NavMobile.css
@@ -4,14 +4,27 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1.2rem 0 1.2rem;
+    
+    height: calc(100% - 1.2rem);
+    width: calc(100% - 1.2rem);
     margin: 0.6rem;
     border-radius: 3rem;
     box-shadow: -10px 8px 12px #0000003d;
 }
 
+    .img-navmobile{
+        margin-right: 1.5rem;
+        width: 36px;
+        height: 70%;
+    }
 
-#user-icon{
+    .img-navmobile img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+    }
+
+/* #user-icon{
     color: var(--accent-color);
     font-size: 25px;
-}
+} */
