--- a/src/styles/MenuMobileDropDown.css
+++ b/src/styles/MenuMobileDropDown.css
@@ -14,8 +14,8 @@
 #container-DropDown{
     width: 50%;
     height: 100%;
-    background-color: var(--main-color);
-    backdrop-filter: blur(10px);
+    background-color: #bfc0904b;
+    backdrop-filter: blur(25px);
     display: flex;
     flex-direction: column;
     border-radius: 0 20px 20px 0;
