--- a/src/styles/NavWeb.css
+++ b/src/styles/NavWeb.css
@@ -93,11 +93,13 @@
     width: 100%;
 
     margin-left: 1rem;
-    padding-left: 0.5rem;
+    padding-left: 1rem;
     background-color: #F2FEDC;
     border-radius: 20px 0 0 20px;
-    transition: margin-left 0.5s;
+    transition: margin-left 0.5s, border-radius 0.7s;
+    
 }
+
 
 
 .cur-top{
@@ -105,7 +107,7 @@
     height:100%;
     width: 100%;
     background-color:#F2FEDC;
-    
+    transition: background-color 0.7s;
 
 }
 .cur-top::after{
@@ -116,8 +118,10 @@
     height: 100%;
     position: relative;
     border-radius: 0 0 100% 0;
-
+    transition: border-radius 1s;
 }
+
+
 
 .cur-bot{
     grid-area: cur-bot;
@@ -134,6 +138,7 @@
     height: 100%;
     position: relative;
     border-radius: 0 100% 0 0;
+    transition: border-radius 1s;
 
 }
 
