--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -14,11 +14,18 @@
 
 
 
-#container-search h1 {
-    margin-top: 0.3rem;
+#container-search input {
     margin-left: 0.3rem;
     font-size: 12px;
+    background:none;
+    border: none;
+    outline: 0;    
+    width: 100%;
+    font-family: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+            'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+            sans-serif;
 }
+
 
 #container-search i{
     margin-right: 0.8rem;
