--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,7 +1,7 @@
-#container-search{
+.container-search{
     font-size: 12px;
     width: 70%;
-    height: fit-content;
+    
     padding: 0.3rem;
     margin-top: 1rem;
     background-color: var(--secundary-color);
@@ -13,6 +13,16 @@
     position: relative;
     z-index: 3;
 }
+
+.search-show{
+    height: fit-content;
+}
+
+.search-hidde{
+    
+    height: 20px;
+}
+
 
 #hola{
     width: 100%;
