--- a/src/styles/SuggestList.css
+++ b/src/styles/SuggestList.css
@@ -1,3 +1,30 @@
 .s-hidden{
     visibility: hidden;
 }
+
+.container-ul{
+    padding: 0;
+
+    
+}
+.container-ul li{
+    list-style: none;
+    padding-left: 0.5rem;
+    font-style: italic;
+    transition: all 0.3s;
+    border-radius: 15px;
+    display:flex;
+    align-items: center;
+    height: 30px;
+}
+
+
+.container-ul li:hover{
+    background-color: var(--main-color);
+    transition: all 0.3s;
+    padding-left: 2rem;
+    display: flex;
+    align-items: center;
+    
+
+}
