--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     height: 100vh;
     display: flex; 
     justify-content: flex-start;
-    background-color: #F2FEDC;
+    background-color: var(--bg-color);
 }
 
 #container-nav{
