--- a/src/styles/Conceptos.css
+++ b/src/styles/Conceptos.css
@@ -6,6 +6,7 @@
     overflow-y: scroll;
     padding-top: 0.5rem;
     padding-left: 1rem;
+    animation: over 1s;
 }
 
 .item-avance {
@@ -18,9 +19,22 @@
     -webkit-backdrop-filter: blur(13.2px); */
     transition: transform 0.5s;
     margin: 0.5rem;
+    overflow: hidden;
 }
 
 .item-avance:hover {
     transform: scale(1.05);
     transition: all 0.5s;
+}
+
+@keyframes over {
+    0% {
+        transform: scale(5);
+    }
+
+    100% {
+        transform: scale(1);
+        
+    }
+
 }
