--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-#app{
-    
+.background{
     width: 100vw;
     height: 100vh;
     display: flex; 
     justify-content: flex-start;
     background-color: var(--bg-color);
+    
 }
 
 #container-nav{
@@ -23,7 +23,7 @@
 /* Esto es para la parte mobile */
 /*max-width se aplica hasta llegar a los 600px */
 @media screen and (max-width: 600px){
-    #app{
+    .background{
         flex-direction: column;
     }
     #container-nav{
@@ -35,3 +35,4 @@
         height:88%;
     }
 }
+
