se implemento un nuevo color para los componentes de dashboard y subcoceptos, el cual contrasta de mejor manera con los colores principales de la app, de la misma forma se implemento un barra de porcentaje para cada subconcepto

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
   --main-color:#FFED4D; 
   --text-color: #675900;
   --secundary-color: #e2eb94;
-  --third-color:#9b915c98;
+  --third-color:#856a5c;
   --color-shadow:0;
   --border-color:#ada257;
   --bg-color:#F2FEDC;
