--- a/src/styles/Conceptos.css
+++ b/src/styles/Conceptos.css
@@ -11,7 +11,7 @@
 }
 
 .item-avance {
-    height: 11rem;
+    height: 12rem;
     width: 23%;
     color:white;
     background: var(--third-color);
@@ -23,8 +23,8 @@
     margin: 0.5rem;
     overflow: hidden;
     display: grid;
-    grid-template-columns: 1.5fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1.5fr 0.8fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 0.5fr 0.5fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -40,21 +40,21 @@
 @media screen and (max-width: 1088px) and (min-width: 900px){
     .item-avance{
         width: 30%;
-        height: 11rem;
+        height: 12rem;
     }
 }
 
 @media screen and (max-width: 899px) and (min-width:700px){
     .item-avance{
         width: 45%;
-        height: 11rem;
+        height: 12rem;
     }
 }
 
 @media screen and (max-width: 699px){
     .item-avance {
             width: 90%;
-            height: 11rem;
+            height: 12rem;
         }
 }
 
@@ -109,7 +109,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 12px;
 }
 
 .actualNumber {
@@ -137,12 +136,23 @@
 }
 
 .subconcepto1 {
+    padding-left: 15px;
     grid-area: subconcepto1;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .subconcepto2 {
+    padding-left: 15px;
     grid-area: subconcepto2;
-    background-color: cadetblue;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .cirBar1 {
@@ -156,8 +166,21 @@
 
 .price1 {
     grid-area: price1;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .price2 {
     grid-area: price2;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item-avance span{
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
