se agrego un carpeta a la caperta de Componentes,  en la cual se agrego dos nuevos archivos el primero es el componente CircleBar y el segundo la hoja de estilo de este componente

--- a/src/styles/Conceptos.css
+++ b/src/styles/Conceptos.css
@@ -155,13 +155,18 @@
     overflow: hidden;
 }
 
-.cirBar1 {
+.cirbar1 {
     grid-area: cirBar1;
-    background-color: crimson;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.cirBar2 {
+.cirbar2 {
     grid-area: cirBar2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .price1 {
